--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -31,4 +31,19 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_ippon_training:
     # Config indicated by + and applies to all files under models/
-    +materialized: table
+    staging: 
+      +materialized: ephemeral
+      +schema: staging
+    marts:
+      +materialized: table
+      +schema: marts
+
+
+seeds:
+  dbt_ippon_training:
+    +schema: seeds
+
+vars:
+  nbRestauToShow : 3
+
+
